# fragalysis-mock-target-access-authenticator

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  logging.config  pyproject.toml  ta-map.txt
.github/workflows/: build.yaml  tag.yaml
app/: app.py  config.py
